--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <p id="item-name">Cholle Samosa </p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 285</h3>
+                    <h3 id="item-price">Price : Rs 285</h3>
                 </div>
             </div>
         </section>
