--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <p id="item-name">Taco Quesadila Pizza</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 190</h3>
+                    <h3 id="item-price">Price : Rs 190</h3>
                 </div>
                 <div class="item-container" id="1">
                     <div class="card-item">
@@ -110,7 +110,7 @@
                         <p id="item-name">The full works burger</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 90</h3>
+                    <h3 id="item-price">Price : Rs 90</h3>
                 </div>
                 <div class="item-container" id="2">
                     <div class="card-item">
@@ -118,7 +118,7 @@
                         <p id="item-name">Chhole Bhature</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 160</h3>
+                    <h3 id="item-price">Price : Rs 160</h3>
                 </div>
                 <div class="item-container" id="3">
                     <div class="card-item">
@@ -126,7 +126,7 @@
                         <p id="item-name">Biryani</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 200</h3>
+                    <h3 id="item-price">Price : Rs 200</h3>
                 </div>
                 <div class="item-container" id="4">
                     <div class="card-item">
@@ -134,7 +134,7 @@
                         <p id="item-name">Chilli-Potato</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 350</h3>
+                    <h3 id="item-price">Price : Rs 350</h3>
                 </div>
 
                 <div class="item-container" id="5">
@@ -143,7 +143,7 @@
                         <p id="item-name">Idli Sambhar</p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 240</h3>
+                    <h3 id="item-price">Price : Rs 240</h3>
                 </div>
 
                 <div class="item-container" id="6">
@@ -152,7 +152,7 @@
                         <p id="item-name">Chhole Samosa </p>
                     </div>
                     <i class="fa fa-shopping-cart" id="add-to-cart"></i>
-                    <h3 id="item-price">Price : $ 285</h3>
+                    <h3 id="item-price">Price : Rs 285</h3>
                 </div>
                 <div class="item-container" id="6">
                     <div class="card-item">
